tests/bad/implied_global.js

function foo() {
    "use strict";
    bar = 5;
}